add listing state

--- a/hilt-mvvm/app/src/main/res/layout/home_fragment.xml
+++ b/hilt-mvvm/app/src/main/res/layout/home_fragment.xml
@@ -18,7 +18,7 @@
       >
 
     <androidx.cardview.widget.CardView
-        android:id="@+id/cardView"
+        android:id="@+id/cardView_home"
         android:layout_width="match_parent"
         android:layout_height="300dp"
         android:layout_marginStart="16dp"
@@ -31,6 +31,10 @@
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
+        android:clickable="true"
+        android:focusable="true"
+        android:transitionGroup="true"
+        android:transitionName="@string/contry_card_transition_name"
         app:showContent="@{viewModel.isLoading}"
         >
       <androidx.constraintlayout.widget.ConstraintLayout
@@ -42,6 +46,7 @@
             android:id="@+id/imageView"
             android:layout_width="0dp"
             android:layout_height="0dp"
+            android:contentDescription="@string/desc_text_image"
             android:scaleType="centerCrop"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -91,7 +96,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginEnd="16dp"
-            android:text="Capitale: Libreville"
+            android:text="@string/lib_capitale_libreville"
             android:textAppearance="@style/TextAppearance.AppCompat.Body1"
             android:textColor="#B3FFFFFF"
             app:layout_constraintBottom_toTopOf="@id/sub_text_devise"
@@ -103,7 +108,7 @@
             android:id="@+id/sub_text_devise"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Devise: "
+            android:text="@string/lib_devise"
             android:textAppearance="@style/TextAppearance.AppCompat.Body1"
             android:textColor="#B3FFFFFF"
             app:layout_constraintBottom_toTopOf="@id/sub_text_dial"
@@ -133,7 +138,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginBottom="16dp"
-            android:text="code de numérotation: "
+            android:text="@string/lib_code_dial"
             android:textAppearance="@style/TextAppearance.AppCompat.Body1"
             android:textColor="#B3FFFFFF"
             app:layout_constraintBottom_toTopOf="@+id/action_button_1"
@@ -148,7 +153,7 @@
             android:minWidth="0dp"
             android:paddingStart="8dp"
             android:paddingEnd="8dp"
-            android:text="Nos provinces"
+            android:text="@string/lib_btn_nos_provinces"
             android:textColor="#FFFFFFFF"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -163,7 +168,7 @@
             android:minWidth="0dp"
             android:paddingStart="8dp"
             android:paddingEnd="8dp"
-            android:text="yaaaaaa"
+            android:text="@string/lib_btn_une_autre_photo"
             android:textColor="#FFFFFFFF"
             app:layout_constraintStart_toEndOf="@+id/action_button_1"
             app:layout_constraintTop_toTopOf="@+id/action_button_1"
@@ -173,6 +178,7 @@
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:layout_marginStart="16dp"
+            android:contentDescription="@string/desc_drapeau_du_gabon"
             app:layout_constraintBottom_toBottomOf="@+id/sub_text_dial"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="@+id/primary_text"
