--- a/hilt-mvvm/app/src/main/res/navigation/nav_graph.xml
+++ b/hilt-mvvm/app/src/main/res/navigation/nav_graph.xml
@@ -9,5 +9,18 @@
       android:id="@+id/homeFragment"
       android:name="ga.banga.country.ui.screens.home.HomeFragment"
       android:label="home_fragment"
-      tools:layout="@layout/home_fragment" />
+      tools:layout="@layout/home_fragment">
+    <action
+        android:id="@+id/action_homeFragment_to_listStateFragment"
+        app:destination="@id/listStateFragment" />
+  </fragment>
+  <fragment
+      android:id="@+id/listStateFragment"
+      android:name="ga.banga.country.ui.screens.list.ListStateFragment"
+      android:label="list_state_fragment"
+      tools:layout="@layout/list_state_fragment">
+    <argument
+        android:name="states"
+        app:argType="ga.banga.country.data.models.states.State[]" />
+  </fragment>
 </navigation>
