--- a/hilt-mvvm/app/src/main/res/values/colors.xml
+++ b/hilt-mvvm/app/src/main/res/values/colors.xml
@@ -7,4 +7,14 @@
   <color name="teal_700">#FF018786</color>
   <color name="black">#FF000000</color>
   <color name="white">#FFFFFFFF</color>
+  <color name="grey">#B2989898</color>
+
+  <color name="primaryColor">#fafafa</color>
+  <color name="primaryLightColor">#ffffff</color>
+  <color name="primaryDarkColor">#c7c7c7</color>
+  <color name="secondaryColor">#ff8a65</color>
+  <color name="secondaryLightColor">#ffbb93</color>
+  <color name="secondaryDarkColor">#c75b39</color>
+  <color name="primaryTextColor">#000000</color>
+  <color name="secondaryTextColor">#000000</color>
 </resources>
